examples/test/testpolicy5775.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5775
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key40: value25
      key38: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value38
      podSelector:
        matchLabels:
          key26: value21
          key19: value15
          key16: value27
